# webfetch-camouflage-mcp

./: AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/webfetch_camouflage_mcp/: __init__.py  server.py
tests/: __init__.py  test_fetch.py  test_server.py
